// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Confirmation dialog component should render with default props 1`] = `
<WithStyles(ForwardRef(Dialog))
  aria-describedby="confirmation-dialog-description"
  aria-labelledby="confirmation-dialog-title"
  disableBackdropClick={true}
  disableEscapeKeyDown={true}
  maxWidth="md"
  open={true}
>
  <WithStyles(ForwardRef(DialogTitle))
    id="confirmation-dialog-title"
  >
    Some dialog title
  </WithStyles(ForwardRef(DialogTitle))>
  <WithStyles(ForwardRef(DialogContent))>
    <WithStyles(ForwardRef(DialogContentText))
      dangerouslySetInnerHTML={
        Object {
          "__html": <p>
            Are you sure?
          </p>,
        }
      }
      id="confirmation-dialog-description"
    />
  </WithStyles(ForwardRef(DialogContent))>
  <WithStyles(ForwardRef(DialogActions))>
    <WithStyles(ForwardRef(Button))
      color="primary"
      onClick={[Function]}
      variant="contained"
    >
      OK
    </WithStyles(ForwardRef(Button))>
    <WithStyles(ForwardRef(Button))
      onClick={[Function]}
    >
      Cancel
    </WithStyles(ForwardRef(Button))>
  </WithStyles(ForwardRef(DialogActions))>
</WithStyles(ForwardRef(Dialog))>
`;

exports[`Confirmation dialog component should render without button texts 1`] = `
<WithStyles(ForwardRef(Dialog))
  aria-describedby="confirmation-dialog-description"
  aria-labelledby="confirmation-dialog-title"
  disableBackdropClick={true}
  disableEscapeKeyDown={true}
  maxWidth="md"
  open={true}
>
  <WithStyles(ForwardRef(DialogTitle))
    id="confirmation-dialog-title"
  >
    Some dialog title
  </WithStyles(ForwardRef(DialogTitle))>
  <WithStyles(ForwardRef(DialogContent))>
    <WithStyles(ForwardRef(DialogContentText))
      dangerouslySetInnerHTML={
        Object {
          "__html": <p>
            Are you sure?
          </p>,
        }
      }
      id="confirmation-dialog-description"
    />
  </WithStyles(ForwardRef(DialogContent))>
  <WithStyles(ForwardRef(DialogActions))>
    <WithStyles(ForwardRef(Button))
      color="primary"
      onClick={[Function]}
      variant="contained"
    >
      ok
    </WithStyles(ForwardRef(Button))>
    <WithStyles(ForwardRef(Button))
      onClick={[Function]}
    >
      cancel
    </WithStyles(ForwardRef(Button))>
  </WithStyles(ForwardRef(DialogActions))>
</WithStyles(ForwardRef(Dialog))>
`;
